--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -304,7 +304,7 @@
 	<msg mid="_MSG_MSGS_FOR_SERVICE"
     value="Meldungen fur den Service %s (version %s)" />
 	<msg mid="_MSG_NB_LINES"
-    value="_MSG_NB_LINES: %d" />
+    value="_MSG_NB_LINES: " />
 	<msg mid="_MSG_NEED_DEFINE_CONTACT"
 		value="Wenn Sie Alarme senden wollen mussen Sie einen Kontakt definieren." />
 	<msg mid="_MSG_NEED_REPORT_FOR_SCHEDULE"
@@ -318,7 +318,7 @@
 	<msg mid="_MSG_NO_UPDATES_AVAILABLE"
 		value="Keine Updates verfuegbar !" />
 	<msg mid="_MSG_REACH_MAX_LINES"
-    value="_MSG_REACH_MAX_LINES %d" />
+    value="_MSG_REACH_MAX_LINES: " />
 	<msg mid="_MSG_REPORT_DATA_SOURCE"
     value="Daten von %d Dateien / %d Zeilen bearbeitet in %d Minuten und %d Sekunden." />
   <msg mid="_MSG_REPORT_GENERATED_BY"
