--- a/usr/share/aat/Translations/EN.xml
+++ b/usr/share/aat/Translations/EN.xml
@@ -305,7 +305,7 @@
   <msg mid="_MSG_MSGS_FOR_SERVICE"
     value="Messages for Service %s (version %s)" />
   <msg mid="_MSG_NB_LINES"
-    value="Number of Lines: %d" />
+    value="Number of Lines: " />
   <msg mid="_MSG_NEED_DEFINE_CONTACT"
     value="If you want to send Alerts, you need to define Contacts." />
   <msg mid="_MSG_NEED_REPORT_FOR_SCHEDULE"
@@ -319,7 +319,7 @@
 	<msg mid="_MSG_NO_UPDATES_AVAILABLE"
     value="No Updates Available" />
   <msg mid="_MSG_REACH_MAX_LINES"
-    value="Maximum of %d lines reached !" />
+    value="Maximum of %d lines reached!" />
   <msg mid="_MSG_REPORT_DATA_SOURCE"
     value="Data from %d files / %d lines handled in %d minutes and %d seconds." />
   <msg mid="_MSG_REPORT_GENERATED_BY"
