--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -302,7 +302,7 @@
 	<msg mid="_MSG_MSGS_FOR_SERVICE"
     value="Mensajes para el Servicio %s (version %s)" />
 	<msg mid="_MSG_NB_LINES"
-    value="_MSG_NB_LINES: %d" />
+    value="_MSG_NB_LINES: " />
 	<msg mid="_MSG_NEED_DEFINE_CONTACT"
     value="Si quieres enviar Alertas, tienes antes que definir Contactos." />
 	<msg mid="_MSG_NEED_REPORT_FOR_SCHEDULE"
@@ -316,7 +316,7 @@
 	<msg mid="_MSG_NO_UPDATES_AVAILABLE"
 		value="No hay Actualizaciones disponibles" />
 	<msg mid="_MSG_REACH_MAX_LINES"
-    value="_MSG_REACH_MAX_LINES %d" />
+    value="_MSG_REACH_MAX_LINES: " />
 	<msg mid="_MSG_REPORT_DATA_SOURCE"
     value="Informacion de %d files / %d lineas gestionada en $d minutos y %d segundos." />
   <msg mid="_MSG_REPORT_GENERATED_BY"
