--- a/usr/share/aat/Translations/FR.xml
+++ b/usr/share/aat/Translations/FR.xml
@@ -304,7 +304,7 @@
 	<msg mid="_MSG_MSGS_FOR_SERVICE"
     value="Messages pour le Service %s (version %s)" />
 	 <msg mid="_MSG_NB_LINES"
-    value="Nombre de Lignes: %d" />
+    value="Nombre de Lignes: " />
 	<msg mid="_MSG_NEED_DEFINE_CONTACT"
     value="Si vous voulez envoyer des Alertes, vous devez définir des Contacts." />
 	<msg mid="_MSG_NEED_REPORT_FOR_SCHEDULE"
@@ -318,7 +318,7 @@
 	<msg mid="_MSG_NO_UPDATES_AVAILABLE"
     value="Pas de Mise à Jour Disponible" />
 	<msg mid="_MSG_REACH_MAX_LINES"
-    value="Maximum de %d lignes atteint !" />
+    value="Maximum de %d lignes atteint!" />
 	<msg mid="_MSG_REPORT_DATA_SOURCE"
     value="Données provenant de %d fichiers / %d lignes traitées en %d minutes et %d secondes." />
   <msg mid="_MSG_REPORT_GENERATED_BY"
