Various Bugfixes + Services and Translations Updates

--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -5,7 +5,9 @@
 	<msg mid="_GERMAN" value="German" />
 	<msg mid="_PORTUGUESE" value="_PORTUGUESE" />
 	<msg mid="_SPANISH" value="Spanish" />
-
+	
+	<msg mid="_DISABLED" value="_DISABLED" />
+  <msg mid="_ENABLED" value="_ENABLED" />
 	<msg mid="_YES" value="Ja" />
   <msg mid="_NO" value="Nein" />
 
@@ -156,6 +158,9 @@
 	<msg mid="_COUNTRY" value="_COUNTRY" />
 	<msg mid="_CPU_USAGE" value="CPU-Auslastung" />
 	<msg mid="_CREATE_REPORT" value="_CREATE_REPORT" />
+	<msg mid="_DEFAULT_DIR_INCOMING_LOGS" value="_DEFAULT_DIR_INCOMING_LOGS" />
+	<msg mid="_DEFAULT_DIR_KNOWN_LOGS" value="_DEFAULT_DIR_KNOWN_LOGS" />
+	<msg mid="_DEFAULT_DIR_UNKNOWN_LOGS" value="_DEFAULT_DIR_UNKNOWN_LOGS" />	
 	<msg mid="_DEVICE" value="Geraet" />
 	<msg mid="_DEVICE_ADDRESS" value="Device Address" />
 	<msg mid="_DEVICE_DESCRIPTION" value="Device Description" />
@@ -164,6 +169,9 @@
 	<msg mid="_DEVICE_TYPE" value="Geraetetyp" />
 	<msg mid="_DEVICES" value="Geraete" />
 	<msg mid="_DEVICEGROUPS" value="Geraetegruppe" />
+	<msg mid="_DIR_INCOMING_LOGS" value="_DIR_INCOMING_LOGS" />
+  <msg mid="_DIR_KNOWN_LOGS" value="_DIR_KNOWN_LOGS" />
+  <msg mid="_DIR_UNKNOWN_LOGS" value="_DIR_UNKNOWN_LOGS" />
 	<msg mid="_DOWNLOAD_CSV_FILE" value="Download CSV Datei" />
   <msg mid="_DOWNLOAD_FILE" value="Download Datei" />
 	<msg mid="_FINISH_PERIOD" value="_FINISH_PERIOD" />
@@ -222,6 +230,8 @@
 	<msg mid="_PROCESSOR" value="Prozessor" />
 	<msg mid="_RACK" value="Rack" />
 	<msg mid="_RANK" value="Rang" />
+	<msg mid="_REGEXP_EXC" value="Regexp (Excl.)" />
+  <msg mid="_REGEXP_INC" value="Regexp (Incl.)" />
 	<msg mid="_REMOVE_LOG_MINUTE" value="_REMOVE_LOG_MINUTE" />
 	<msg mid="_REPORT" value="Bericht" />
 	<msg mid="_REPORT_CATEGORIES" value="_REPORT_CATEGORIES" />
