--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -4,6 +4,7 @@
 	<msg mid="_FRENCH" value="French" />
 	<msg mid="_GERMAN" value="German" />
 	<msg mid="_PORTUGUESE" value="_PORTUGUESE" />
+	<msg mid="_RUSSIAN" value="_RUSSIAN" />
 	<msg mid="_SPANISH" value="Spanish" />
 
 	<msg mid="_DISABLED" value="_DISABLED" />
