--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -71,6 +71,7 @@
   <msg mid="_BUG_REPORT" value="Fehlerbericht" />
 	<msg mid="_CANCEL" value="Abbrechen" />
 	<msg mid="_CERTIFICATE" value="_CERTIFICATE" />
+	<msg mid="_COMMON_NAME" value="_COMMON_NAME" />
 	<msg mid="_CONFIG_FILE" value="Konfigurationsdatei" />
 	<msg mid="_DASHBOARD" value="_DASHBOARD" />
 	<msg mid="_DELETE" value="Loeschen" />
@@ -177,6 +178,7 @@
   <msg mid="_DIR_UNKNOWN_LOGS" value="_DIR_UNKNOWN_LOGS" />
 	<msg mid="_DOWNLOAD_CSV_FILE" value="Download CSV Datei" />
   <msg mid="_DOWNLOAD_FILE" value="Download Datei" />
+	<msg mid="_DURATION_D" value="_DURATION_D" />	
 	<msg mid="_FINISH_PERIOD" value="_FINISH_PERIOD" />
 	<msg mid="_GET_LOGS" value="_GET_LOGS" />
 	<msg mid="_GRAPH_HEIGHT" value="_GRAPH_HEIGHT" />
@@ -238,6 +240,7 @@
 	<msg mid="_REGEXP_EXC" value="Regexp (Excl.)" />
   <msg mid="_REGEXP_INC" value="Regexp (Incl.)" />
 	<msg mid="_REMOVE_LOG_MINUTE" value="_REMOVE_LOG_MINUTE" />
+	<msg mid="_REPETITION_D" value="_REPETITION_N" />
 	<msg mid="_REPORT" value="Bericht" />
 	<msg mid="_REPORT_CATEGORIES" value="_REPORT_CATEGORIES" />
 	<msg mid="_REPORT_CREATION" value="Berichtserstellung" />
