--- a/usr/share/aat/Translations/ES.xml
+++ b/usr/share/aat/Translations/ES.xml
@@ -71,6 +71,7 @@
 	<msg mid="_BUG_REPORT" value="Informar de Bugs" />
 	<msg mid="_CANCEL" value="Cancelar" />
   <msg mid="_CERTIFICATE" value="_CERTIFICATE" />
+	<msg mid="_COMMON_NAME" value="_COMMON_NAME" />
 	<msg mid="_CONFIG_FILE" value="Configuration File" />
 	<msg mid="_DASHBOARD" value="_DASHBOARD" />
 	<msg mid="_DELETE" value="Suprimir" />
@@ -176,6 +177,7 @@
   <msg mid="_DIR_UNKNOWN_LOGS" value="_DIR_UNKNOWN_LOGS" />
 	<msg mid="_DOWNLOAD_CSV_FILE" value="Descargar Archivo CSV" />
   <msg mid="_DOWNLOAD_FILE" value="Descargar Archivo" />
+	<msg mid="_DURATION_D" value="_DURATION_D" />
 	<msg mid="_FINISH_PERIOD" value="_FINISH_PERIOD" />
 	<msg mid="_GET_LOGS" value="_GET_LOGS" />
 	<msg mid="_GRAPH_HEIGHT" value="_GRAPH_HEIGHT" />
@@ -237,6 +239,7 @@
 	<msg mid="_REGEXP_EXC" value="Regexp (Excl.)" />
   <msg mid="_REGEXP_INC" value="Regexp (Incl.)" />
 	<msg mid="_REMOVE_LOG_MINUTE" value="_REMOVE_LOG_MINUTE" />
+	<msg mid="_REPETITION_N" value="_REPETITION_N" />
 	<msg mid="_REPORT" value="Informe" />
 	<msg mid="_REPORT_CATEGORIES" value="_REPORT_CATEGORIES" />
 	<msg mid="_REPORT_CREATION" value="Creacion de Informe" />
