--- a/usr/share/aat/Translations/PT.xml
+++ b/usr/share/aat/Translations/PT.xml
@@ -71,6 +71,7 @@
   <msg mid="_BUG_REPORT" value="Relatório de Bugs" />
 	<msg mid="_CANCEL" value="Cancela" />
   <msg mid="_CERTIFICATE" value="_CERTIFICATE" />
+	<msg mid="_COMMON_NAME" value="_COMMON_NAME" />
 	<msg mid="_CONFIG_FILE" value="Arquivo de Configuração" />
 	<msg mid="_DASHBOARD" value="Painel de Controle" />
 	<msg mid="_DELETE" value="Deleta" />
@@ -178,6 +179,7 @@
   <msg mid="_DIR_UNKNOWN_LOGS" value="_DIR_UNKNOWN_LOGS" />
 	<msg mid="_DOWNLOAD_CSV_FILE" value="Download do Arquivo CSV " />
 	<msg mid="_DOWNLOAD_FILE" value="Download do Arquivo" />
+	<msg mid="_DURATION_D" value="_DURATION_D" />
 	<msg mid="_FINISH_PERIOD" value="_FINISH_PERIOD" />
 	<msg mid="_GET_LOGS" value="Coletar Logs" />
 	<msg mid="_GRAPH_HEIGHT" value="Altura do Gráfico" />
@@ -239,6 +241,7 @@
 	<msg mid="_REGEXP_EXC" value="Regexp (Excl.)" />
   <msg mid="_REGEXP_INC" value="Regexp (Incl.)" />
 	<msg mid="_REMOVE_LOG_MINUTE" value="Remover Log por Minuto" />
+	<msg mid="_REPETITION_N" value="_REPETITION_N" />
 	<msg mid="_REPORT" value="Report" />
 	<msg mid="_REPORT_CATEGORIES" value="Categorias de Relatório" />
 	<msg mid="_REPORT_CREATION" value="Criação de Relatório" />
