--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -82,8 +82,11 @@
 	<msg mid="_FINISH" value="Beenden" />
 	<msg mid="_HELP" value="Hilfe" />
 	<msg mid="_HOST" value="Host" />
+	<msg mid="_ICONS_AND_TEXT" value="_ICONS_AND_TEXT" />
+	<msg mid="_ICONS_ONLY" value="_ICONS_ONLY" />
 	<msg mid="_KEY" value="Key" />
 	<msg mid="_LOGOUT" value="Logout" />
+	<msg mid="_MENU_DISPLAY" value="_MENU_DISPLAY" />
 	<msg mid="_MODIFY" value="Modifizieren" />
 	<msg mid="_NEXT" value="Naechster" />
 	<msg mid="_OK" value="Ok" />
@@ -97,6 +100,7 @@
   <msg mid="_STATUS" value="Status" />
 	<msg mid="_STOP" value="Stop" />
 	<msg mid="_STOPPED" value="Angehalten" />
+	<msg mid="_TEXT_ONLY" value="_TEXT_ONLY" />
 	<msg mid="_UPDATE" value="Update" />
 	<msg mid="_USER" value="Benutzer" />
 	<msg mid="_USERS" value="Benutzer" />
