--- a/usr/share/aat/Translations/EN.xml
+++ b/usr/share/aat/Translations/EN.xml
@@ -82,8 +82,11 @@
 	<msg mid="_FINISH" value="Finish" />
 	<msg mid="_HELP" value="Help" />
 	<msg mid="_HOST" value="Host" />
+	<msg mid="_ICONS_AND_TEXT" value="Icons and Text" />
+  <msg mid="_ICONS_ONLY" value="Icons Only" />
 	<msg mid="_KEY" value="Key" />
 	<msg mid="_LOGOUT" value="Logout" />
+	<msg mid="_MENU_DISPLAY" value="Menu Display" />
 	<msg mid="_MODIFY" value="Modify" />
 	<msg mid="_NEXT" value="Next" />
 	<msg mid="_OK" value="Ok" />
@@ -97,6 +100,7 @@
   <msg mid="_STATUS" value="Status" />
 	<msg mid="_STOP" value="Stop" />
 	<msg mid="_STOPPED" value="Stopped" />
+	<msg mid="_TEXT_ONLY" value="Text Only" />
 	<msg mid="_UPDATE" value="Update" />
 	<msg mid="_USER" value="User" />
 	<msg mid="_USER_PREF" value="User Preferences" />
