--- a/usr/share/aat/Translations/RU.xml
+++ b/usr/share/aat/Translations/RU.xml
@@ -82,8 +82,11 @@
 	<msg mid="_FINISH" value="Закончить" />
 	<msg mid="_HELP" value="Помощь" />
 	<msg mid="_HOST" value="Хост" />
+	<msg mid="_ICONS_AND_TEXT" value="_ICONS_AND_TEXT" />
+  <msg mid="_ICONS_ONLY" value="_ICONS_ONLY" />
 	<msg mid="_KEY" value="Ключ" />
 	<msg mid="_LOGOUT" value="Выйти" />
+	<msg mid="_MENU_DISPLAY" value="_MENU_DISPLAY" />
 	<msg mid="_MODIFY" value="Изменить" />
 	<msg mid="_NEXT" value="Следующий" />
 	<msg mid="_OK" value="Ok" />
@@ -97,6 +100,7 @@
   <msg mid="_STATUS" value="Статус" />
 	<msg mid="_STOP" value="Стоп" />
 	<msg mid="_STOPPED" value="Остановлено" />
+	<msg mid="_TEXT_ONLY" value="_TEXT_ONLY" />
 	<msg mid="_UPDATE" value="Обновить" />
 	<msg mid="_USER" value="Пользователь" />
 	<msg mid="_USER_PREF" value="Настройки пользователя" />
